Create entities with shift + a

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,13 +4,13 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1835,881
+Pos=1881,881
 Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=396,575
-Size=571,325
+Pos=395,575
+Size=572,325
 Collapsed=0
 DockId=0x00000006,0
 
@@ -22,7 +22,7 @@ DockId=0x00000007,0
 
 [Window][Scene Objects List Window]
 Pos=0,56
-Size=394,844
+Size=393,844
 Collapsed=0
 DockId=0x00000003,0
 
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=396,56
-Size=1132,517
+Pos=395,56
+Size=1133,517
 Collapsed=0
 DockId=0x00000008,0
 
@@ -49,15 +49,20 @@ Size=856,440
 Collapsed=0
 
 [Window][Do you want to quit?]
-Pos=850,415
-Size=370,70
+Pos=820,417
+Size=370,90
+Collapsed=0
+
+[Window][popup]
+Pos=889,470
+Size=370,143
 Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=394,844 Selected=0x0F5F40DF
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1504,844 Split=Y
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=393,844 Selected=0x0F5F40DF
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1505,844 Split=Y
       DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1900,517 CentralNode=1 Selected=0x44D9F559
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1900,325 Split=X
         DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=374,138 Selected=0x1FC0499E
