Added more entities when shift + a

--- a/imgui.ini
+++ b/imgui.ini
@@ -41,7 +41,7 @@ DockId=0x00000008,0
 [Window][Entities]
 Pos=60,62
 Size=639,561
-Collapsed=0
+Collapsed=1
 
 [Window][Material Node Editor]
 Pos=1060,88
@@ -56,6 +56,11 @@ Collapsed=0
 [Window][popup]
 Pos=889,470
 Size=370,143
+Collapsed=0
+
+[Window][Texture Previewer]
+Pos=60,60
+Size=370,40
 Collapsed=0
 
 [Docking][Data]
