--- a/imgui.ini
+++ b/imgui.ini
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=395,575
-Size=572,325
+Pos=371,581
+Size=654,319
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Code Editor Window]
-Pos=969,575
-Size=559,325
+Pos=1027,581
+Size=501,319
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
 
 [Window][Scene Objects List Window]
 Pos=0,56
-Size=393,844
+Size=369,844
 Collapsed=0
 DockId=0x00000003,0
 
@@ -33,13 +33,13 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=395,56
-Size=1133,517
+Pos=371,56
+Size=1157,523
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Window][Entities]
-Pos=60,62
+Pos=58,62
 Size=639,561
 Collapsed=1
 
@@ -65,12 +65,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=393,844 Selected=0x0F5F40DF
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1505,844 Split=Y
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1900,517 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1900,325 Split=X
-        DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=374,138 Selected=0x1FC0499E
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=366,138 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,844 Selected=0xF58E28BB
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x0F5F40DF
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1157,844 Split=Y
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1900,523 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1900,319 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=654,325 Selected=0x1FC0499E
+        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=501,325 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=370,844 Selected=0xF58E28BB
 
