Re-enabling PBR - normal

--- a/GameBuilder/makefile
+++ b/GameBuilder/makefile
@@ -10,10 +10,16 @@ define echo_fail
 endef
 
 
+STRING1 ?= "hiiii"
+STRING2 ?= ""
+
 CXXFLAGS = -g -pipe -std=c++17 -fpermissive -w -Wall -g
 SRC_FILES = gameSystem.cpp
 INCLUDE_DIRS = -I../include/ -I./include/nlohmann
 LIB_FLAGS = -L./include -lboost_filesystem -lraylib -pthread -lpython3.11 -fPIC `python3.11 -m pybind11 --includes` -ldl
 
 build:
-	@g++ $(CXXFLAGS) $(SRC_FILES) $(INCLUDE_DIRS) $(LIB_FLAGS) -o ../exported_game/my_program.out
+	@g++ $(CXXFLAGS) $(SRC_FILES) $(INCLUDE_DIRS) $(LIB_FLAGS) -o ../exported_game/my_program.out -DSTRING1=$(STRING1) -DSTRING2=$(STRING2)
+
+print:
+	@echo $(STRING1)
