--- a/project.json
+++ b/project.json
@@ -6,10 +6,10 @@
             "g": 255,
             "r": 255
         },
-        "id": 1435566308,
+        "id": -1348661037,
         "model_path": "project/game/models/plane.obj",
         "name": "",
-        "normal_texture_path": "",
+        "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
         "position": {
             "x": 0.0,
             "y": 0.0,
@@ -22,137 +22,11 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 50.0,
+            "x": 30.0,
             "y": 1.0,
-            "z": 50.0
+            "z": 30.0
         },
         "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "project/game/logo1.png",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": 1435566309,
-        "model_path": "project/game/models/cube.obj",
-        "name": "",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 4.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 4.0,
-            "z": 10.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 0,
-            "g": 0,
-            "r": 255
-        },
-        "id": 1435566310,
-        "model_path": "project/game/models/cube.obj",
-        "name": "",
-        "normal_texture_path": "",
-        "position": {
-            "x": 14.0,
-            "y": 4.0,
-            "z": 10.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 15.0,
-            "y": 4.0,
-            "z": 1.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 0,
-            "g": 107,
-            "r": 255
-        },
-        "id": 1435566311,
-        "model_path": "project/game/models/test.obj",
-        "name": "player",
-        "normal_texture_path": "",
-        "position": {
-            "x": 15.600000381469727,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_path": "project/game/hi.py",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -184,21 +58,21 @@
         "id": 5,
         "intensity": 0.5,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
-            "x": 4.0,
+            "x": 8.399982452392578,
             "y": 4.0,
             "z": 4.0
         },
         "relative_position": {
-            "x": 114908594176.0,
-            "y": 4.591634678053128e-41,
-            "z": 1.3392083846054206e+27
+            "x": 0,
+            "y": 0,
+            "z": 0
         },
         "specularStrength": 0.5,
         "target": {
             "x": 0.0,
-            "y": 5.605193857299268e-45,
+            "y": 1.401298464324817e-45,
             "z": 722.0
         },
         "type": "light"
