--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -6,8 +6,55 @@
             "g": 255,
             "r": 255
         },
-        "id": 1435566308,
+        "id": -1348661037,
         "model_path": "project/game/models/plane.obj",
+        "name": "wall",
+        "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
+        "position": {
+            "x": 0.0,
+            "y": 4.0,
+            "z": -8.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 90.0,
+            "y": 0.7850000262260437,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 4.0,
+            "y": 1.0,
+            "z": 4.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "project/game/textures/brick_wall_02_diff_4k.png",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661036,
+        "model_path": "project/game/models/cube.obj",
         "name": "floor",
         "normal_texture_path": "",
         "position": {
@@ -20,52 +67,15 @@
             "y": 0.0,
             "z": 0.0
         },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 50.0,
-            "y": 1.0,
-            "z": 50.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "project/game/logo1.png",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": 1435566309,
-        "model_path": "project/game/models/cube.obj",
-        "name": "wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 4.0,
-            "z": 0.0
-        },
-        "relative_position": {
+        "rotation": {
             "x": 0.0,
             "y": 0.0,
             "z": 0.0
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 1.0,
-            "y": 4.0,
+            "x": 10.0,
+            "y": 0.10000000149011612,
             "z": 10.0
         },
         "script_path": "",
@@ -86,28 +96,33 @@
     {
         "color": {
             "a": 255,
-            "b": 0,
-            "g": 0,
+            "b": 255,
+            "g": 255,
             "r": 255
         },
-        "id": 1435566310,
+        "id": -1348661035,
         "model_path": "project/game/models/cube.obj",
-        "name": "wall",
+        "name": "highPlace",
         "normal_texture_path": "",
         "position": {
-            "x": 14.0,
-            "y": 4.0,
-            "z": 10.0
+            "x": 0.0,
+            "y": 6.0,
+            "z": 7.399998664855957
         },
         "relative_position": {
             "x": 0.0,
             "y": 0.0,
             "z": 0.0
         },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
         "roughness_texture_path": "",
         "scale": {
-            "x": 15.0,
-            "y": 4.0,
+            "x": 10.0,
+            "y": 6.0,
             "z": 1.0
         },
         "script_path": "",
@@ -128,20 +143,72 @@
     {
         "color": {
             "a": 255,
-            "b": 0,
-            "g": 107,
+            "b": 255,
+            "g": 255,
             "r": 255
         },
-        "id": 1435566311,
+        "id": -1348661034,
+        "model_path": "project/game/models/cube.obj",
+        "name": "high place",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.0,
+            "y": 11.0,
+            "z": 3.5
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 10.0,
+            "y": 1.0,
+            "z": 3.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 0,
+            "g": 90,
+            "r": 255
+        },
+        "id": -1348661033,
         "model_path": "project/game/models/test.obj",
         "name": "player",
         "normal_texture_path": "",
         "position": {
-            "x": 15.600000381469727,
-            "y": 1.1999998092651367,
-            "z": 0.0
+            "x": 0.0,
+            "y": 18.399999618530273,
+            "z": 2.90000057220459
         },
         "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
             "x": 0.0,
             "y": 0.0,
             "z": 0.0
@@ -152,7 +219,7 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_path": "project/game/hi.py",
+        "script_path": "project/game/coins collector.py",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -168,46 +235,40 @@
         "type": "entity"
     },
     {
+        "attenuation": 0.004999999888241291,
         "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
+            "a": 1.0,
+            "b": 0.0,
+            "g": 0.0,
+            "r": 1.0
         },
-        "id": 1435566312,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Ceiling",
-        "normal_texture_path": "",
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 5,
+        "intensity": 1.3930000066757202,
+        "light_type": 1,
+        "name": "",
         "position": {
-            "x": 13.300004959106445,
-            "y": 8.0,
-            "z": -3.600001335144043
+            "x": -14.000000953674316,
+            "y": 4.0,
+            "z": -9.900001525878906
         },
         "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.5,
+        "target": {
             "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "y": 2.802596928649634e-45,
+            "z": 722.0
         },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 15.0,
-            "y": 1.0,
-            "z": 15.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
+        "type": "light"
     },
     {
         "attenuation": 9.999999747378752e-05,
@@ -240,43 +301,7 @@
         "specularStrength": 0.5,
         "target": {
             "x": 0.0,
-            "y": 5.605193857299268e-45,
-            "z": 722.0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.0,
-        "color": {
-            "a": 1.0,
-            "b": 1.0,
-            "g": 1.0,
-            "r": 1.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": -0.5270000100135803,
-            "y": -0.5540000200271606,
-            "z": -0.4000000059604645
-        },
-        "id": 5,
-        "intensity": 5.803999900817871,
-        "light_type": 0,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 4.0,
-            "z": 4.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 7.006492321624085e-45,
+            "y": 2.802596928649634e-45,
             "z": 722.0
         },
         "type": "light"
