--- a/project.json
+++ b/project.json
@@ -7,7 +7,8 @@
             "r": 255
         },
         "id": -1348661037,
-        "is_dynamic": true,
+        "is_dynamic": false,
+        "mass": 1.0,
         "model_path": "project/game/models/plane.obj",
         "name": "wall",
         "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
@@ -56,6 +57,7 @@
         },
         "id": -1348661036,
         "is_dynamic": false,
+        "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
         "name": "floor",
         "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
@@ -103,7 +105,8 @@
             "r": 255
         },
         "id": -1348661035,
-        "is_dynamic": true,
+        "is_dynamic": false,
+        "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
         "name": "highPlace",
         "normal_texture_path": "",
@@ -151,7 +154,8 @@
             "r": 255
         },
         "id": -1348661034,
-        "is_dynamic": true,
+        "is_dynamic": false,
+        "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
         "name": "high place",
         "normal_texture_path": "",
@@ -192,6 +196,55 @@
         "type": "entity"
     },
     {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661033,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "model_path": "project/game/models/test.obj",
+        "name": "project/game/models/test",
+        "normal_texture_path": "",
+        "position": {
+            "x": -0.20000000298023224,
+            "y": 16.800006866455078,
+            "z": 4.09999942779541
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_path": "project/game/coins collector.py",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
         "attenuation": 0.004999999888241291,
         "color": {
             "a": 1.0,
@@ -205,7 +258,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 3,
+        "id": 4,
         "intensity": 1.3930000066757202,
         "light_type": 1,
         "name": "",
@@ -241,7 +294,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 3,
+        "id": 4,
         "intensity": 0.5,
         "light_type": 1,
         "name": "",
