--- a/imgui.ini
+++ b/imgui.ini
@@ -9,14 +9,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,586
-Size=370,314
+Pos=371,584
+Size=370,316
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Code Editor Window]
-Pos=743,586
-Size=785,314
+Pos=743,584
+Size=785,316
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1157,528
+Size=1157,526
 Collapsed=0
 DockId=0x00000006,0
 
@@ -63,13 +63,23 @@ Pos=60,60
 Size=370,40
 Collapsed=0
 
+[Window][Appearance]
+Pos=60,60
+Size=370,228
+Collapsed=0
+
+[Window][Create New Theme]
+Pos=60,60
+Size=423,126
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x0F5F40DF
   DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
     DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1157,844 Split=Y
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1900,528 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1900,314 Split=X Selected=0x1FC0499E
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1900,526 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1900,316 Split=X Selected=0x1FC0499E
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=370,325 Selected=0x1FC0499E
         DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=785,325 Selected=0xF2B1FC4A
     DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=370,844 Selected=0xF58E28BB
