--- a/project.json
+++ b/project.json
@@ -108,7 +108,7 @@
         "is_dynamic": false,
         "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
-        "name": "high place",
+        "name": "2 floor",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
@@ -157,12 +157,12 @@
         "is_dynamic": true,
         "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
-        "name": "project/game/models/test",
+        "name": "player",
         "normal_texture_path": "",
         "position": {
             "x": -0.6000000238418579,
             "y": 2.5,
-            "z": 4.09999942779541
+            "z": -1.2000004053115845
         },
         "relative_position": {
             "x": 0.0,
@@ -191,6 +191,349 @@
                 "z": 1.0
             },
             "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "Wall 1",
+        "normal_texture_path": "",
+        "position": {
+            "x": -2.999999761581421,
+            "y": 6.0,
+            "z": 14.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 6.0,
+            "z": 6.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "slope",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.5,
+            "y": 4.675000190734863,
+            "z": 11.299997329711914
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": -135.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 2.5,
+            "y": 9.5,
+            "z": 1.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "Wall 1",
+        "normal_texture_path": "",
+        "position": {
+            "x": 6.499998569488525,
+            "y": 6.0,
+            "z": 7.399998664855957
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 3.5,
+            "y": 6.0,
+            "z": 1.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "Wall 1",
+        "normal_texture_path": "",
+        "position": {
+            "x": 4.0,
+            "y": 6.0,
+            "z": 13.5
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 6.0,
+            "z": 6.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661034,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "2 floor",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.0,
+            "y": 11.0,
+            "z": 20.39999771118164
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 10.0,
+            "y": 1.0,
+            "z": 3.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "Wall 1",
+        "normal_texture_path": "",
+        "position": {
+            "x": 6.999999523162842,
+            "y": 11.0,
+            "z": 12.600004196166992
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 3.0,
+            "y": 1.0,
+            "z": 5.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
+        },
+        "texture_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": -1348661035,
+        "is_dynamic": false,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "Wall 1",
+        "normal_texture_path": "",
+        "position": {
+            "x": -6.999999046325684,
+            "y": 11.0,
+            "z": 12.600004196166992
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 3.0,
+            "y": 1.0,
+            "z": 5.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5550000071525574,
+            "Roughness": 0.0,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -263,6 +606,42 @@
         "target": {
             "x": 0.0,
             "y": 2.802596928649634e-45,
+            "z": 722.0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 1.0,
+            "b": 0.0,
+            "g": 0.0,
+            "r": 1.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": 1154547712,
+        "intensity": 0.9459999799728394,
+        "light_type": 1,
+        "name": "",
+        "position": {
+            "x": -3.2000014781951904,
+            "y": 15.599996566772461,
+            "z": 17.300004959106445
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 0.0,
+            "y": 1.2611686178923354e-44,
             "z": 722.0
         },
         "type": "light"
