--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -615,7 +615,7 @@
         "color": {
             "a": 1.0,
             "b": 0.0,
-            "g": 0.6023165583610535,
+            "g": 0.0,
             "r": 1.0
         },
         "cutOff": 10.0,
@@ -624,19 +624,19 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 12,
+        "id": 1154547712,
         "intensity": 0.9459999799728394,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": -3.2000014781951904,
             "y": 15.599996566772461,
             "z": 17.300004959106445
         },
         "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "specularStrength": 0.5,
         "target": {
