--- a/project.json
+++ b/project.json
@@ -6,15 +6,15 @@
             "g": 255,
             "r": 255
         },
-        "id": 10052139,
+        "id": 1436348971,
         "is_dynamic": false,
         "mass": 1.0,
         "model_path": "project/game/models/plane.obj",
-        "name": "project/game/models/plane",
-        "normal_texture_path": "",
+        "name": "floor",
+        "normal_texture_path": "project/game/textures/metal grid/metalgrid2_normal-ogl.png",
         "position": {
             "x": 0.0,
-            "y": 0.0,
+            "y": 0.5999994277954102,
             "z": 0.0
         },
         "relative_position": {
@@ -29,9 +29,9 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 10.0,
-            "y": 1.0,
-            "z": 10.0
+            "x": 20.0,
+            "y": 0.009999999776482582,
+            "z": 20.0
         },
         "script_path": "",
         "surface_material": {
@@ -45,26 +45,26 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
+        "texture_path": "project/game/textures/metal grid/metalgrid2_basecolor.png",
         "type": "entity"
     },
     {
         "color": {
             "a": 255,
-            "b": 255,
-            "g": 255,
+            "b": 0,
+            "g": 157,
             "r": 255
         },
-        "id": 10052140,
-        "is_dynamic": false,
+        "id": 1436348972,
+        "is_dynamic": true,
         "mass": 1.0,
         "model_path": "project/game/models/cube.obj",
-        "name": "project/game/models/cube",
-        "normal_texture_path": "",
+        "name": "wooden box",
+        "normal_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_normal.png",
         "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 2.8999996185302734
+            "x": -8.999998092651367,
+            "y": 1.9999995231628418,
+            "z": 8.600000381469727
         },
         "relative_position": {
             "x": 0.0,
@@ -76,7 +76,7 @@
             "y": 0.0,
             "z": 0.0
         },
-        "roughness_texture_path": "",
+        "roughness_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_roughness.png",
         "scale": {
             "x": 1.0,
             "y": 1.0,
@@ -94,11 +94,194 @@
             },
             "shininess": 0.5
         },
+        "texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_basecolor.png",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 0,
+            "g": 157,
+            "r": 255
+        },
+        "id": 1436348972,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "wooden box",
+        "normal_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_normal.png",
+        "position": {
+            "x": 5.80000114440918,
+            "y": 1.9999995231628418,
+            "z": 7.199997901916504
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_roughness.png",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_basecolor.png",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 0,
+            "g": 157,
+            "r": 255
+        },
+        "id": 1436348972,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "wooden box",
+        "normal_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_normal.png",
+        "position": {
+            "x": -0.7999987006187439,
+            "y": 1.9999995231628418,
+            "z": 0.9999983906745911
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_roughness.png",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "project/game/textures/oakfloor_fb1-bl/oakfloor_basecolor.png",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "id": 1436348973,
+        "is_dynamic": true,
+        "mass": 1.0,
+        "model_path": "project/game/models/cube.obj",
+        "name": "player",
+        "normal_texture_path": "",
+        "position": {
+            "x": 3.500000238418579,
+            "y": 3.0,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_path": "project/game/coins collector.py",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
         "texture_path": "",
         "type": "entity"
     },
     {
-        "attenuation": 0.0,
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 1.0,
+            "b": 0.12355214357376099,
+            "g": 0.9763121604919434,
+            "r": 1.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": -0.44600000977516174,
+            "y": 0.3930000066757202,
+            "z": -0.3569999933242798
+        },
+        "id": 1154547712,
+        "intensity": 2.678999900817871,
+        "light_type": 0,
+        "name": "",
+        "position": {
+            "x": 4.0,
+            "y": 3.7999982833862305,
+            "z": 3.200000047683716
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 0.0,
+            "y": 1.401298464324817e-45,
+            "z": 722.0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 1.0,
             "b": 1.0,
@@ -107,28 +290,28 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": -1.0,
-            "y": -0.017999999225139618,
-            "z": 0.4020000100135803
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
         },
         "id": 1154547712,
-        "intensity": 2.7320001125335693,
+        "intensity": 0.5,
         "light_type": 1,
         "name": "",
         "position": {
-            "x": -1.5000054836273193,
+            "x": -3.8999993801116943,
             "y": 4.0,
-            "z": -0.40000054240226746
+            "z": 4.0
         },
         "relative_position": {
             "x": 0.0,
             "y": 0.0,
             "z": 0.0
         },
-        "specularStrength": 0.6880000233650208,
+        "specularStrength": 0.5,
         "target": {
             "x": 0.0,
-            "y": 1.401298464324817e-45,
+            "y": 2.802596928649634e-45,
             "z": 722.0
         },
         "type": "light"
