Added Text into Games Objects List

--- a/imgui.ini
+++ b/imgui.ini
@@ -44,9 +44,10 @@ Size=639,561
 Collapsed=1
 
 [Window][Material Node Editor]
-Pos=780,138
-Size=856,440
+Pos=743,580
+Size=785,320
 Collapsed=0
+DockId=0x0000000B,1
 
 [Window][Do you want to quit?]
 Pos=820,417
