--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -1,649 +1,1 @@
-[
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661036,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/plane.obj",
-        "name": "floor",
-        "normal_texture_path": "project/game/textures/brick_wall_02_nor_gl_4k.png",
-        "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 30.0,
-            "y": 1.0,
-            "z": 30.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "project/game/textures/brick_wall_02_diff_4k.png",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": -6.0,
-            "y": 6.0,
-            "z": 7.399998664855957
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 4.0,
-            "y": 6.0,
-            "z": 1.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661034,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "2 floor",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 11.0,
-            "z": 3.5
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 10.0,
-            "y": 1.0,
-            "z": 3.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661033,
-        "is_dynamic": true,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "player",
-        "normal_texture_path": "",
-        "position": {
-            "x": -0.6000000238418579,
-            "y": 2.5,
-            "z": -1.2000004053115845
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 2.0,
-            "z": 1.0
-        },
-        "script_path": "project/game/coins collector.py",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": -2.999999761581421,
-            "y": 6.0,
-            "z": 14.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 6.0,
-            "z": 6.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "slope",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.5,
-            "y": 4.675000190734863,
-            "z": 11.299997329711914
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": -135.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 2.5,
-            "y": 9.5,
-            "z": 1.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": 6.499998569488525,
-            "y": 6.0,
-            "z": 7.399998664855957
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 3.5,
-            "y": 6.0,
-            "z": 1.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": 4.0,
-            "y": 6.0,
-            "z": 13.5
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 6.0,
-            "z": 6.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661034,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "2 floor",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 11.0,
-            "z": 20.39999771118164
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 10.0,
-            "y": 1.0,
-            "z": 3.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": 6.999999523162842,
-            "y": 11.0,
-            "z": 12.600004196166992
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 3.0,
-            "y": 1.0,
-            "z": 5.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": -1348661035,
-        "is_dynamic": false,
-        "mass": 1.0,
-        "model_path": "project/game/models/cube.obj",
-        "name": "Wall 1",
-        "normal_texture_path": "",
-        "position": {
-            "x": -6.999999046325684,
-            "y": 11.0,
-            "z": 12.600004196166992
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 3.0,
-            "y": 1.0,
-            "z": 5.0
-        },
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5550000071525574,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "attenuation": 0.004999999888241291,
-        "color": {
-            "a": 1.0,
-            "b": 0.0,
-            "g": 0.0,
-            "r": 1.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": -0.4729999899864197,
-            "y": 0.22300000488758087,
-            "z": -0.19499999284744263
-        },
-        "id": 1154547712,
-        "intensity": 2.2320001125335693,
-        "light_type": 0,
-        "name": "",
-        "position": {
-            "x": -62.399993896484375,
-            "y": 4.0,
-            "z": -1.3999996185302734
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 2.802596928649634e-45,
-            "z": 722.0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 1.0,
-            "b": 1.0,
-            "g": 1.0,
-            "r": 1.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": 1154547712,
-        "intensity": 1.8389999866485596,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 9.800006866455078,
-            "z": 4.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 2.802596928649634e-45,
-            "z": 722.0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 1.0,
-            "b": 0.0,
-            "g": 0.0,
-            "r": 1.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": 1154547712,
-        "intensity": 0.9459999799728394,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -3.2000014781951904,
-            "y": 15.599996566772461,
-            "z": 17.300004959106445
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 1.2611686178923354e-44,
-            "z": 722.0
-        },
-        "type": "light"
-    }
-]
+null
