--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][Scene Objects List Window]
 Pos=0,56
-Size=369,844
+Size=370,844
 Collapsed=0
 
 [Window][Inspector Window]
@@ -29,7 +29,7 @@ Size=370,844
 Collapsed=0
 
 [Window][Scene Editor Window]
-Pos=371,56
+Pos=372,56
 Size=1157,527
 Collapsed=0
 
@@ -77,4 +77,7 @@ Collapsed=0
 Pos=60,60
 Size=400,200
 Collapsed=0
+
+[Docking][Data]
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 CentralNode=1
 
