--- a/imgui.ini
+++ b/imgui.ini
@@ -1,37 +1,42 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,56
-Size=1900,844
+Size=1920,983
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=806,132
+Pos=1863,881
 Size=437,261
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,585
-Size=741,315
+Pos=371,566
+Size=619,473
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Code Editor Window]
-Pos=1114,585
-Size=414,315
+Pos=992,566
+Size=511,473
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Scene Objects List Window]
 Pos=0,56
-Size=370,844
+Size=369,983
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Inspector Window]
-Pos=1530,56
-Size=370,844
+Pos=1505,56
+Size=415,983
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Scene Editor Window]
-Pos=372,56
-Size=1157,527
+Pos=371,56
+Size=1132,508
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Entities]
 Pos=58,62
@@ -44,7 +49,7 @@ Size=785,320
 Collapsed=0
 
 [Window][Do you want to quit?]
-Pos=820,417
+Pos=830,487
 Size=370,90
 Collapsed=0
 
@@ -79,5 +84,13 @@ Size=400,200
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 CentralNode=1
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1920,983 Split=X
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1483,844 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=369,844 Selected=0x0F5F40DF
+    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=1112,844 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1900,508 Selected=0x44D9F559
+      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=1900,334 Split=X
+        DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=619,423 Selected=0x1FC0499E
+        DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=491,423 CentralNode=1 Selected=0xF2B1FC4A
+  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=415,844 Selected=0xF58E28BB
 
